--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaMccpUXSmdIZ4+p4eC5S9",
+      "authorship_tag": "ABX9TyNCPM+VkUnaakdVDMGFiJOJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,6 +342,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#performing some EDA (Exploratory Data Analysis)\n",
         "#information about the above declared pandas dataframe 'data'\n",
         "data.info()"
       ],
