--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCPM+VkUnaakdVDMGFiJOJ",
+      "authorship_tag": "ABX9TyPjo9l+iYiPbHYFPgl4o+Ic",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1165,6 +1165,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#Cleaning and transforming the data has been done, now we move onto the model."
+      ],
+      "metadata": {
+        "id": "RUZmpbkvzptT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#importing train_test_split from sklearn\n",
         "from sklearn.model_selection import train_test_split\n",
         "#splitting the data into train & test sets, with the test set having 20% of the data\n",
@@ -1441,7 +1452,10 @@
         "plt.ylim([0, 1])\n",
         "plt.ylabel('True Positive Rate')\n",
         "plt.xlabel('False Positive Rate')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "#The Area Under the Curve (AUC) is the measure of the ability of a classifier to distinguish between classes.\n",
+        "#It is used as a summary of the ROC curve.\n",
+        "#The higher the AUC, the better the performance of the model at distinguishing between the classes."
       ],
       "metadata": {
         "colab": {
