--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjo9l+iYiPbHYFPgl4o+Ic",
+      "authorship_tag": "ABX9TyOpWBhGiBjEcK40VYk5kFtF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,7 +946,8 @@
       "source": [
         "#reducing dimensionality of the data\n",
         "#dropping columns with redundant, futile information\n",
-        "data = data.drop(columns=['oldbalanceOrg', 'oldbalanceDest', 'isFlaggedFraud', 'nameOrig', 'nameDest'])"
+        "data = data.drop(columns=['oldbalanceOrg', 'oldbalanceDest', 'isFlaggedFraud', 'nameOrig', 'nameDest'])\n",
+        "#the columns 'step', 'type', 'amount', 'newbalanceOrig', 'newbalanceDest' in the dataframe are the factors that influnce the prediction of fraudulent behaviour the most."
       ],
       "metadata": {
         "id": "Ta0fE9qQG6xc"
@@ -1484,10 +1485,65 @@
     {
       "cell_type": "code",
       "source": [
-        "#"
+        "# Notes on the imbalanced dataset -->\n",
+        "\n",
+        "#the company should collect more examples of fraud transactions, \n",
+        "#or synthesize examples of fraud data through generative methods for better trainng of the classification models.\n",
+        "#using cost sensitive models like the above used Logistic Regression model; SVM, Decision, Tree Classifier or Ensemble models may also be used."
       ],
       "metadata": {
         "id": "lXDHsDe4SV3g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Factors to look out for -->\n",
+        "\n",
+        "#the model flagging the transasctions as fraud/not_fraud should be trained to lookout for :\n",
+        "#1. frequent, multiple small amount transactions, \n",
+        "#2. abrubtly high amount transcations,\n",
+        "#3. the type of transactions taking place,\n",
+        "#4. the account balance before and after the transaction."
+      ],
+      "metadata": {
+        "id": "gJe8SyuGCGrF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Once the infrastructure is implemented by the company :\n",
+        "\n",
+        "# metrics such as f1 score, precision, recall, may be used to measure the performance of the model,\n",
+        "# lookout for decrease in the number of fraudulent transactions,\n",
+        "# check out customer reviews & complaints related to fraud transactions."
+      ],
+      "metadata": {
+        "id": "J5gun3YXDI-1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Final thoughts :\n",
+        "\n",
+        "# implementation of a pipline will be helpful:\n",
+        "# to make the code modular,\n",
+        "# implement the preprocessing, scaling, dimensionality reducion, model, etc. in a lesser lines of code.\n",
+        "\n",
+        "# Use of Deep Learning models ranging from :\n",
+        "# Simple ANNs for classifications to Graph Neural Networks might prove to be more effective,\n",
+        "# though computationally expensive and require larger, balanced and better quality datasets for training."
+      ],
+      "metadata": {
+        "id": "qubLo-ZtCkLK"
       },
       "execution_count": null,
       "outputs": []
