--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpWBhGiBjEcK40VYk5kFtF",
+      "authorship_tag": "ABX9TyO0gy0ytCDS9tFHRH0g9TZ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1502,9 +1502,9 @@
       "source": [
         "# Factors to look out for -->\n",
         "\n",
-        "#the model flagging the transasctions as fraud/not_fraud should be trained to lookout for :\n",
+        "#the model flagging the transactions as fraud/not_fraud should be trained to lookout for :\n",
         "#1. frequent, multiple small amount transactions, \n",
-        "#2. abrubtly high amount transcations,\n",
+        "#2. abrubtly high amount transactions,\n",
         "#3. the type of transactions taking place,\n",
         "#4. the account balance before and after the transaction."
       ],
@@ -1536,7 +1536,7 @@
         "\n",
         "# implementation of a pipline will be helpful:\n",
         "# to make the code modular,\n",
-        "# implement the preprocessing, scaling, dimensionality reducion, model, etc. in a lesser lines of code.\n",
+        "# implement the preprocessing, scaling, dimensionality reducion, model, etc. in lesser lines of code.\n",
         "\n",
         "# Use of Deep Learning models ranging from :\n",
         "# Simple ANNs for classifications to Graph Neural Networks might prove to be more effective,\n",
