--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0gy0ytCDS9tFHRH0g9TZ2",
+      "authorship_tag": "ABX9TyMkrHGQVaVUt4ICQkAypXwl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1534,9 +1534,9 @@
       "source": [
         "# Final thoughts :\n",
         "\n",
-        "# implementation of a pipline will be helpful:\n",
+        "# implementation of a pipeline will be helpful:\n",
         "# to make the code modular,\n",
-        "# implement the preprocessing, scaling, dimensionality reducion, model, etc. in lesser lines of code.\n",
+        "# implement the preprocessing, scaling, dimensionality reduction, model, etc. in lesser lines of code.\n",
         "\n",
         "# Use of Deep Learning models ranging from :\n",
         "# Simple ANNs for classifications to Graph Neural Networks might prove to be more effective,\n",
