--- a/INSAID_Fraud_detection.ipynb
+++ b/INSAID_Fraud_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkrHGQVaVUt4ICQkAypXwl",
+      "authorship_tag": "ABX9TyMTw9Eta0gwWhxrvWNxeqWP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1489,7 +1489,7 @@
         "\n",
         "#the company should collect more examples of fraud transactions, \n",
         "#or synthesize examples of fraud data through generative methods for better trainng of the classification models.\n",
-        "#using cost sensitive models like the above used Logistic Regression model; SVM, Decision, Tree Classifier or Ensemble models may also be used."
+        "#using cost sensitive models like the above used Logistic Regression model; SVM, Decision Tree Classifier or Ensemble models may also be used."
       ],
       "metadata": {
         "id": "lXDHsDe4SV3g"
@@ -1520,6 +1520,8 @@
         "# Once the infrastructure is implemented by the company :\n",
         "\n",
         "# metrics such as f1 score, precision, recall, may be used to measure the performance of the model,\n",
+        "# use safety checks/ firewalls with the customer to ensure no fraud,\n",
+        "# moniter customer behaviour such as the number, amount of transactions, mode/type of transactions compared to their past transactions,\n",
         "# lookout for decrease in the number of fraudulent transactions,\n",
         "# check out customer reviews & complaints related to fraud transactions."
       ],
@@ -1540,7 +1542,11 @@
         "\n",
         "# Use of Deep Learning models ranging from :\n",
         "# Simple ANNs for classifications to Graph Neural Networks might prove to be more effective,\n",
-        "# though computationally expensive and require larger, balanced and better quality datasets for training."
+        "# though computationally expensive and require larger, balanced and better quality datasets for training.\n",
+        "\n",
+        "# Keeping in mind the notion that fraud most of the time can be completely random, \n",
+        "# irrespective of the account holder, their balance, etc.\n",
+        "# Hence, the model may not always be effective."
       ],
       "metadata": {
         "id": "qubLo-ZtCkLK"
